--- a/src/components/calculator.css
+++ b/src/components/calculator.css
@@ -40,3 +40,11 @@ button {
   right: 0;
   bottom: 0;
 }
+
+.result {
+  color: white;
+    display: flex;
+    justify-content: flex-end;
+    padding-top: 5em;
+    margin-right: .5em;
+}
